# aoc2024

./: .gitignore
rust/: .gitignore  Cargo.toml  Justfile
rust/crates/aoc2024-cli/: Cargo.toml
rust/crates/aoc2024-cli/src/: client.rs  main.rs  workspace.rs
rust/crates/aoc2024-day01/: Cargo.toml
rust/crates/aoc2024-day01/src/: location.rs  main.rs  part1.rs  part2.rs
rust/crates/aoc2024-macros/: Cargo.toml
rust/crates/aoc2024-macros/src/: lib.rs
rust/template/: Cargo.toml
rust/template/src/: main.rs  part1.rs  part2.rs
