[package]
name = "aoc2024-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc2024-macros = { workspace = true }

anyhow = "1.0.93"
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = { version = "4.5.21", features = ["derive", "env"] }
html2md = "0.2.14"
reqwest = "0.12.9"
scraper = "0.21.0"
tokio = { version = "1.41.1", features = ["full"] }
